@@ -3763,6 +3763,8 @@ static GrPixelConfig gl_format_to_pixel_config(GrGLFormat format) {
 
         case GrGLFormat::kCOMPRESSED_RGB8_ETC2: return kRGB_ETC1_GrPixelConfig;
         case GrGLFormat::kCOMPRESSED_ETC1_RGB8: return kRGB_ETC1_GrPixelConfig;
+
+        case GrGLFormat::kCOMPRESSED_RGB8_BC1:  return kRGB_BC1_GrPixelConfig;
     }
     SkUNREACHABLE;
 }
